# AiOpsAgent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  dashboard-report.html  pyproject.toml
backend/: package-lock.json
backend/.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json
backend/.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  performance.json  security-audit.json  swarm-activity.json  test-gaps.json  v3-progress.json
backend/.claude-flow/security/: audit-status.json
backend/.claude-flow/swarm/: swarm-state.json
backend/.swarm/: schema.sql  state.json
backend/app/: main.py  settings.py
backend/app/agents/: analytical_agent.py  ceo_agent.py  demo_data.py  graph.py  graphical_representer_agent.py  prompts.py  security_agent.py  servicenow_pulling_agent.py  state.py  tools.py
backend/app/api/: agents.py  deps.py  health.py  rules.py  settings_llm.py
backend/app/db/: models.py  repositories.py  session.py
backend/app/llm/: catalog.py  client.py  crypto.py  recommendations.py
backend/app/security/: auth.py
backend/app/telemetry/: logging.py
backend/tests/: conftest.py  test_agent_graph.py  test_catalog.py  test_connection_test.py  test_crypto.py  test_llm_config_api.py  test_recommendations.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AgentModelTable.tsx  AsyncBlock.tsx  Badges.tsx  ConnectionTestButton.tsx  KpiCard.tsx  RulesPanel.tsx  (+3 more)
(+22 files in other folders)
