[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opsintel-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",

    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # DB
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",

    # LLM gateway
    "litellm>=1.44",

    # Encryption
    "cryptography>=42",

    # Logging
    "structlog>=24",

    # HTTP client (for ServiceNow connector — next pass)
    "httpx>=0.27",

    # Agent graph
    "langgraph>=0.2",
    "langchain-core>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
